--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -791,7 +791,7 @@ jobs:
     needs:
       - build-for-macOS
       - build-for-windows-flutter
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     if: ${{ inputs.upload-artifact }}
     steps:
       - name: Download artifacts
